--- a/ui/ui.css
+++ b/ui/ui.css
@@ -3,8 +3,6 @@
 	height: 80rem;
 	width: 176rem;
 }
-
-
 .menu{
 	display: flex;
 	flex-direction: column;
@@ -35,7 +33,7 @@ row{
 	white-space: pre-wrap;
 	animation: fade 2s linear 4s both;
 }
-#chat.focus div{
+#chat.focus > div{
 	opacity: 1 !important;
 	animation-play-state: paused;
 }
@@ -44,9 +42,28 @@ row{
 	bottom: 30rem;
 	z-index: 20;
 	left: 2rem;
-	right: 2rem;
 	background: #0004;
 	border: none;
 	--padding: 0 3rem;
 	height: 1.1em;
+	width: calc(100% - 4rem);
+}
+
+[hidden]{display: none !important}
+
+#serverlist{
+	box-shadow: inset 0 0 20px black;
+	background: #0004;
+	padding: 5rem;
+	width: 100%;
+}
+#serverlist label{
+	padding: 1rem;
+	margin: 5rem;
+	height: 22rem;
+}
+#serverlist label:hover{
+	border: 1rem #fff8 solid;
+	cursor: pointer;
+	padding: 0;
 }
