--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ in textarea:focus + div > f.__cursor, in input:focus + div > f.__cursor{
 }
 f.__cursor{
 	display: none;
-	letter-spacing: -100px;
+	letter-spacing: -50rem;
 	animation: blink 1.2s steps(2) infinite;
 }
 @keyframes blink{
@@ -96,8 +96,8 @@ input[type=checkbox]:checked::after{
 
 #f3{
 	position: fixed;
-	top: 1px;
-	left: 1px;
+	top: 1rem;
+	left: 1rem;
 	display: none;
 	width: 0;
 	white-space: pre;
@@ -115,14 +115,18 @@ canvas{
 	width: calc(var(--z) * var(--texsize) * 64); height: calc(var(--z) * var(--texsize) * 64);
 	display: block;
 	image-rendering: pixelated;
+	z-index: 2;
 }
 #chunks{
+	width: 100%;
 	height: 100%;
+	z-index: -1;
+	position: absolute;
 }
 
 #pointer{
-	width: 20px;
-	height: 2px;
+	width: 10rem;
+	height: 1rem;
 	mix-blend-mode: difference;
 	background: #ccc;
 	position: absolute;
@@ -133,7 +137,7 @@ canvas{
 #pointer2{
 	width: calc(var(--texsize) * var(--z));
 	height: calc(var(--texsize) * var(--z));
-	border: calc(var(--z) * .5px) #0008 solid;
+	border: calc(var(--z) * .25rem) #0008 solid;
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -141,23 +145,23 @@ canvas{
 }
 #pointer::before{
 	content: "";
-	width: 2px;
-	height: 9px;
+	width: 1rem;
+	height: 4.5rem;
 	mix-blend-mode: difference;
 	background: #ccc;
 	position: absolute;
-	top: -9px;
-	left: 9px;
+	top: -4.5rem;
+	left: 4.5rem;
 }
 #pointer::after{
 	content: "";
-	width: 2px;
-	height: 9px;
+	width: 1rem;
+	height: 4.5rem;
 	mix-blend-mode: difference;
 	background: #ccc;
 	position: absolute;
-	top: 2px;
-	left: 9px;
+	top: 1rem;
+	left: 4.5rem;
 }
 
 #dirtbg{
@@ -348,10 +352,10 @@ entity img{
 }
 
 #chunks.f3b entity{
-	box-shadow: 0 0 0 calc(2px / var(--z)) white;
+	box-shadow: 0 0 0 calc(1rem / var(--z)) white;
 }
 #inventory entity{
-	transform: translate(97px, -55px) scale(4) !important;
+	transform: translate(48rem, -27rem) scale(4) !important;
 	bottom: 100%;
 }
 
