--- a/ui/ui.css
+++ b/ui/ui.css
@@ -52,7 +52,7 @@ row{
 [hidden]{display: none !important}
 
 #serverlist{
-	box-shadow: inset 0 0 20px black;
+	box-shadow: inset 0 0 10rem black;
 	background: #0004;
 	padding: 5rem;
 	width: 100%;
