--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 	text-shadow: 1rem 1rem #3f3f3f;
 	overscroll-behavior-x: none;
 }
-*{margin:0;box-sizing:border-box;padding:0;line-height:1;min-width:0}
+*{margin:0;box-sizing:border-box;padding:0;line-height:1;min-width:0;flex-shrink:0}
 input, textarea{
 	font: inherit;
 	border: unset;
