--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 	0%{background-position-x: 0}
 	100%{background-position-x: -2560px;}
 }
-html{font-size:2px;overscroll-behavior:none}
+html{font-size:2px}
 body{
 	width: 100%;
 	height: 100%;
@@ -28,7 +28,12 @@ body{
 	image-rendering: pixelated;
 	text-shadow: 1rem 1rem #3f3f3f;
 }
-*{margin:0;box-sizing:border-box;padding:0;line-height:1;min-width:0;flex-shrink:0;-webkit-tap-highlight-color:transparent}
+*{
+	margin:0;box-sizing:border-box;
+	padding:0;line-height:1;min-width:0;
+	flex-shrink:0;-webkit-tap-highlight-color:transparent;
+	overscroll-behavior: none;
+}
 input, textarea{
 	font: inherit;
 	border: unset;
