--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ hr{
 	filter: invert(0);
 }
 #ui.noshade{ background-color: #0000 }
-#ui.dirtbg{ background: url('./img/bg32.png') 0 0/48px }
+#ui.dirtbg{ background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgBAMAAACBVGfHAAAAFVBMVEU6Kh0cEw0vIhcmGxIqKioiIiIkHBUi57SIAAAAhUlEQVQoz23PMQ0DMBAEwaNwFJbCUjAFUwh/CCnsJnm389LrNgENaDUmA6TKqkFpJ0QbNWobJ7AjNSCGF0iKUve5/IMFaatVMyHVpTmr5QGePgrKA1DECupt/AWqrZ4RvMDE0ERYPkAhssFiJ1iE6H37APQj2NTAhPPHqr1xAwIuTrwd8AVsL0Zl36pHrwAAAABJRU5ErkJggg) 0 0/48px }
 
 .menu{
 	display: flex;
