--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@ column{
 	white-space: pre-wrap;
 	animation: fade 1s linear 9s both;
 	word-break: break-word;
+	display: none;
 }
 #chat.focus > div{
 	opacity: 1 !important;
