--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: mc;
-	src: url('./img/font.ttf') format('truetype');
+	src: url('./img/font.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -8,7 +8,6 @@
 	0%{background-position-x: 0}
 	100%{background-position-x: -2560px;}
 }
-html{font-size:2px}
 body{
 	width: 100%;
 	height: 100%;
@@ -22,7 +21,7 @@ body{
 	-webkit-user-select: none;
 	-webkit-user-drag: none;
 	font-family: mc, Arial;
-	font-size: 10rem;
+	font-size: 8rem;
 	color: white;
 	animation: spin 1s infinite;
 	image-rendering: pixelated;
@@ -30,9 +29,10 @@ body{
 }
 *{
 	margin:0;box-sizing:border-box;
-	padding:0;line-height:1;min-width:0;
+	padding:0;line-height:12rem;min-width:0;
 	flex-shrink:0;-webkit-tap-highlight-color:transparent;
 	overscroll-behavior: none; touch-action: manipulation;
+	scrollbar-width: none;
 }
 input, textarea{
 	font: inherit;
@@ -52,7 +52,7 @@ in{
 	border: 1rem #a0a0a0 solid;
 	position: relative;
 	z-index: 0;
-	--padding: 3rem;
+	--padding: 1rem 3rem;
 	width: 200rem;
 	height: 20rem;
 }
@@ -176,7 +176,7 @@ btn.disabled{
 .s12, .s13, .s14, .s15 { text-decoration: underline line-through; }
 
 iframe{
-	position: absolute;
+	position: fixed;
 	border: none;
 	left: 0;
 	top: 0;
@@ -201,7 +201,7 @@ hr{
 	background-color: #0006;
 	align-items: center;
 	top: 0; left: 0;
-	bottom: 0; right: 0;
+	bottom: 0; right: var(--pr);
 	z-index: 1001;
 	/* No BGR antialiasing on windows 10 (it looks really ugly) */
 	filter: invert(0);
@@ -246,8 +246,7 @@ column{
 	left: 2rem;
 	background: #0004;
 	border: none;
-	--padding: 0 3rem;
-	height: 1.1em;
+	height: 12rem;
 	width: calc(100% - 4rem);
 }
 
@@ -294,9 +293,7 @@ img:after{
 	#orientationdiv{display: flex !important}
 }
 
-.serverlist > row{
-	padding: 8rem;
-}
+.serverlist > row{ padding: 8rem }
 
 @media (max-height: 600px){
 	#serverlist img{
@@ -333,9 +330,7 @@ img:after{
 	}
 }
 
-#spacing{
-	flex-basis: 15%;
-}
+#spacing{ flex-basis: 15% }
 
 #errors{
 	position: fixed;
@@ -351,9 +346,6 @@ img:after{
 	touch-action: none;
 }
 
-.textc{
-	white-space: pre-wrap;
-}
-.textc > span{
-	display: inline;
-}
+.textc{ white-space: pre-wrap }
+.textc > span{ display: inline }
+::-webkit-scrollbar{ display: none }
