--- a/style.css
+++ b/style.css
@@ -43,37 +43,28 @@ input, textarea{
 	resize: none;
 	background: none;
 	color: transparent;
-	height: 100%;
-	width: 100%;
-	padding: var(--padding);
 }
 in{
 	background: #000;
 	border: 1rem #a0a0a0 solid;
 	position: relative;
 	z-index: 0;
-	--padding: 1rem 3rem;
+	--padding: 3rem;
 	width: 200rem;
 	height: 20rem;
 }
 in.tall{
 	height: 5em;
 }
-in div{
+in div, in input{
 	position: absolute;
-	top: 0;
-	left: 0;
-	padding: var(--padding);
-	z-index: -1;
-	width: 100%;
-	height: 100%;
+	top: 0; height: 100%;
+	left: 0; width: 100%;
 	overflow: auto;
-	white-space: pre-wrap;
 	overflow-wrap: break-word;
+	padding: var(--padding);
 }
-in > input + div{
-	white-space: pre;
-}
+in > div{ z-index: -1 }
 f.__invalid{color: red}
 in textarea:focus + div > f.__cursor, in input:focus + div > f.__cursor{
 	display: inline;
@@ -248,6 +239,7 @@ column{
 	border: none;
 	height: 12rem;
 	width: calc(100% - 4rem);
+	--padding: 0 3rem;
 }
 
 [hidden]{display: none !important}
