--- a/style.css
+++ b/style.css
@@ -58,10 +58,8 @@ in{
 	height: 20rem;
 	overflow: hidden;
 }
-in.tall{
-	height: 5em;
-}
-in div, in input{
+in.tall{ height: 9em; }
+in div, in input, in textarea{
 	position: absolute;
 	top: 0; height: calc(100% + 1rem);
 	left: 0; width: 100%;
@@ -317,6 +315,7 @@ img:after{
 	#serverlist > row{ height: 46rem }
 	#serverlist{ --padding: 5rem }
 	.serverlist > row{ padding: 4rem }
+	in.tall{ height: 7em; }
 }
 @media (max-height: 380px){
 	#serverlist img{
@@ -326,6 +325,7 @@ img:after{
 	#serverlist{ --padding: 3rem }
 	.serverlist > row{ padding: 2rem }
 	#serverlist > row > div > span{ transform: translateY(-6rem) }
+	in.tall{ height: 5em; }
 }
 @media (max-height: 336px) {
 	body{
